--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "reports"]
 	path = reports
-	url = git@git.intra.im:ada.li/reports.git
+	url = git@git.intra.im:xbl_bi/reports.git
 [submodule "vreports"]
 	path = vreports
-	url = git@git.intra.im:ada.li/vreports.git
+	url = git@git.intra.im:xbl_bi/vreports.git
