--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "reports"]
 	path = reports
-	url = git@git.intra.im:bi/reports.git
-[submodule "vreports"]
-	path = vreports
-	url = git@git.intra.im:bi/vreports.git
+	url = git@bitbucket.org:adalee2future/reports.git
