main.cfg添加参数 DATE_RANGE_FMTS，可配置默认时间报表时间范围显示格式（日报、周报、月报等）

--- a/main.cfg.template
+++ b/main.cfg.template
@@ -42,5 +42,10 @@
         "day_shift": 0 #默认报表日期为今天
       }
     }
+  },
+  "date_range_fmts": {
+    "day": ["{end_date}", "%Y%m%d"],
+    "week": ["{start_date}", "%Y%m%d"], #以周一日期代表该周
+    "month": ["{end_date}", "%Y%m"]
   }
 }
